@@ -1,3 +1,5 @@
+[2017-07-09 16:59:13 +0200]  Update packages.xml (deepin)                                               karasu      {36e8afa1}
+[2017-07-08 11:29:30 +0200]  Update packages.xml (deepin)                                               karasu      {573c63e3}
 [2017-07-08 11:29:10 +0200]  Update packages.xml                                                        karasu      {c6ce7a80}
 [2017-07-08 11:27:18 +0200]  Updated deepin packages (again)                                            karasu      {571fa777}
 [2017-07-06 23:27:11 +0200]  Removed package (deepin)                                                   karasu      {105bcdb8}
